# BGX13P_lib_rust

./: Cargo.toml  LICENSE  README.md  run_config_sample.bat  run_connect_sample.bat  run_sample_long_run.bat
examples/: long_run_connection_loop.rs  set_module_default_settings.rs  set_module_default_settings_and_scan.rs  simple_setup_and_connect.rs
src/: bgx.rs  bgx_response.rs  command.rs  con_param.rs  fw.rs  lib.rs  mac.rs  response.rs  response_header.rs  scan.rs  scan_result.rs  scanned_device.rs  state_machine.rs
