[package]
name = "BGX13P_lib_rust"
version = "0.1.0"
authors = ["Christian Albrecht <christianalbrechtca@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
log = "0.4.14"
anyhow = "1.0.52"
thiserror = "1.0.30"
combine = "4.6.3"
strum = { version = "0.23.0", features = ["derive"] }

[dev-dependencies]
simple_logger = "1.16.0"
