[package]
name = "BGX13P_lib_rust"
version = "0.1.0"
authors = ["Christian Albrecht <christianalbrechtca@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.69"
log = "0.4.17"
serialport = "4.2.0"
tap = "1.0.1"
thiserror = "1.0.39"
winnow = "0.3.5"

[dev-dependencies]
simple_logger = "4.0.0"
